[package]
name = "hexspec-cli"
version = "0.1.1"
edition = "2021"

description = "A dsl for creating and verifying byte buffers (command line version)"
license-file = "../LICENSE"
repository = "https://github.com/felgenh3/hexspec"

[[bin]]
name = "hexspec"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0", features = [ "derive" ] }
eyre = "0.6"

hexspec = { path = "../hexspec", version = "0.1.1" }

